# odiff

./: .gitattributes  .gitignore  .spr.yml  .valgrind.supp  BUILD.md  LICENSE  LICENSE.txt  MIT-LICENSE  README.md  ava.config.cjs  azure-pipelines.yml  bench.sh  build.zig  build.zig.zon  colordelta.s  dune-project  odiff-core.opam  odiff-io.opam  odiff-tests.opam  odiff.opam  package-lock.json  package.json  pnpm-lock.yaml  release.sh  run_neon_tests.sh  simple_neon_test.zig  test.c  test.h  test.h.gch  test_alpha_handling.zig  test_simple_neon.zig  typos.toml  vcpkg.json
.ci/: build-platform.yml  copy-binary-executable.js  cross-release.yml  esy-build-steps.yml  pipelines-release.js  release-platform-setup.yml  release-postinstall.js
.ci/utils/: create-docs.yml  use-esy.yml  use-node.yml
.github/: FUNDING.yml
.github/workflows/: build.yml  release-opam.yml  riscv-qemu.yml
c_bindings/: ReadJpg.c  WritePng.c  odiff_io.c  odiff_io.h
esy.lock/: index.json
esy.lock/opam/atd.2.12.0/: opam
esy.lock/opam/atd.2.2.1/: opam
esy.lock/opam/atdgen-runtime.2.12.0/: opam
esy.lock/opam/atdgen-runtime.2.15.0/: opam
esy.lock/opam/atdgen-runtime.2.2.1/: opam
esy.lock/opam/atdgen.2.12.0/: opam
esy.lock/opam/atdgen.2.2.1/: opam
esy.lock/opam/bimage-unix.0.2.1/: opam
esy.lock/opam/bimage.0.2.1/: opam
esy.lock/opam/camlimages.5.0.4/: opam
esy.lock/opam/chrome-trace.3.14.0/: opam
esy.lock/opam/chrome-trace.3.15.0/: opam
esy.lock/opam/conf-libffi.2.0.0/: opam
esy.lock/opam/core.v0.14.0/: opam
esy.lock/opam/core_kernel.v0.14.0/: opam
esy.lock/opam/crunch.3.2.0/: opam
esy.lock/opam/ctypes-foreign.0.4.0/: opam
esy.lock/opam/ctypes.0.17.1/: opam
esy.lock/opam/dot-merlin-reader.3.4.1/: opam
esy.lock/opam/dot-merlin-reader.4.9/: opam
esy.lock/opam/dune-build-info.3.14.0/: opam
esy.lock/opam/dune-build-info.3.15.0/: opam
esy.lock/opam/dune-configurator.3.14.0/: opam
esy.lock/opam/dune-configurator.3.15.0/: opam
esy.lock/opam/dune-rpc.3.14.0/: opam
esy.lock/opam/dune-rpc.3.15.0/: opam
esy.lock/opam/dune.3.14.0/: opam
esy.lock/opam/dune.3.15.0/: opam
esy.lock/opam/dyn.3.14.0/: opam
esy.lock/opam/dyn.3.15.0/: opam
esy.lock/opam/easy-format.1.3.4/: opam
esy.lock/opam/merlin-lib.4.13-414/: opam
esy.lock/opam/merlin-lib.4.14-414/: opam
esy.lock/opam/merlin-lib.4.9-414/: opam
esy.lock/opam/merlin.3.4.1/: opam
esy.lock/opam/merlin.3.5.0/: opam
esy.lock/opam/merlin.4.13-414/: opam
esy.lock/opam/merlin.4.14-414/: opam
esy.lock/opam/merlin.4.9-414/: opam
esy.lock/opam/ocaml-lsp-server.1.16.2/: opam
esy.lock/opam/ocaml-lsp-server.1.17.0/: opam
esy.lock/opam/ocamlc-loc.3.10.0/: opam
esy.lock/opam/ocamlc-loc.3.14.0/: opam
esy.lock/opam/ocamlc-loc.3.15.0/: opam
esy.lock/opam/odoc-parser.2.4.1/: opam
esy.lock/opam/odoc.2.2.1/: opam
esy.lock/opam/odoc.2.4.1/: opam
esy.lock/opam/ordering.3.14.0/: opam
esy.lock/opam/ordering.3.15.0/: opam
esy.lock/opam/ppx_bench.v0.14.1/: opam
esy.lock/opam/ppx_custom_printf.v0.14.0/: opam
esy.lock/opam/ppx_fields_conv.v0.14.1/: opam
esy.lock/opam/ppx_sexp_message.v0.14.0/: opam
esy.lock/opam/ppx_stable.v0.14.1/: opam
esy.lock/opam/ppx_string.v0.14.1/: opam
esy.lock/opam/ppx_typerep_conv.v0.14.1/: opam
esy.lock/opam/ppx_variants_conv.v0.14.1/: opam
esy.lock/opam/ppxlib.0.17.0/: opam
esy.lock/opam/ppxlib.0.32.1~5.2preview/: opam
esy.lock/opam/stdune.3.14.0/: opam
esy.lock/opam/stdune.3.15.0/: opam
esy.lock/opam/xdg.3.14.0/: opam
esy.lock/opam/xdg.3.15.0/: opam
esy.lock/overrides/6c89142d38eb01103de07762eae6858d/: package.json
esy.lock/overrides/a7ae8ae924c8aa35057b80966b510cb1/: .gitignore  Readme.md  esy.json
esy.lock/overrides/af44a93b27c41eb22ba05b3b0cb686a5/: .npmrc  Readme.md  esy.json
images/: README.md
io/: CamlImagesIO.re  ODiffIO.ml  ODiffIO.re  PureC_IO.re  PureC_IO2.re  PureC_IO_Bigarray.re  ReadPng.c  ReadPng.ml  dune
io/bmp/: Bmp.ml  Bmp.mli  Bmp.re  Bmp.rei  ReadBmp.ml  ReadBmp.mli  ReadBmp.re  ReadBmp.rei  dune
io/config/: discover.ml  discover.re  dune
io/jpg/: Jpg.ml  Jpg.re  ReadJpg.c  ReadJpg.ml  ReadJpg.re  dune
io/png/: Png.ml  Png.re  PureC_IO_Bigarray.re  ReadPng.c  ReadPng.ml  ReadPng.re  dune
io/png_bigarray/: Png_Bigarray.re  ReadPng_Bigarray.c  ReadPng_Bigarray.re  dune
io/png_write/: WritePng.c  WritePng.ml  WritePng.re  dune
io/tiff/: ReadTiff.c  ReadTiff.ml  ReadTiff.re  Tiff.ml  Tiff.re  dune
lib/: dune
npm_package/: odiff.d.ts  odiff.js  package.json  post_install.js
npm_packages/odiff-bin/: README.md  binary.js  odiff.d.ts  odiff.js  package.json  post_install.js  server.js
npm_packages/playwright-odiff/: .npmignore  README.md  package.json  playwright.config.ts  tsconfig.cjs.json  tsconfig.json  tsup.config.ts
npm_packages/playwright-odiff/src/: index.ts  (+4 more)
npm_packages/tests/: ava.config.cjs  package.json
scripts/: post-release.js  process-readme.js  set-npm-version.js
src/: Antialiasing.ml  Antialiasing.re  CamlImagesImageIO.re  Chan.ml  ColorDelta.ml  ColorDelta.re  Diff.ml  Diff.re  Fun_queue.ml  Helpers.re  ImageIO.ml  ImageIO.re  PerfTest.ml  PerfTest.re  Task.ml  antialiasing.zig  bmp_reader.zig  c_bindings.zig  cli.zig  color_delta.zig  diff.zig  dune  image_io.zig  io.zig  io_test.zig  main.zig  root.zig  rvv.c  server.zig  terminal_graphics.zig  test_avx.zig  test_color_delta.zig  test_core.zig  test_io.zig  test_io_bmp.zig  test_io_jpg.zig  test_io_png.zig  test_io_tiff.zig  test_io_webp.zig  test_neon.zig  (+6 more)
src/image/: image.zig
src/io/: bmp.zig  image.zig  io.zig  jpeg.zig  memory_mapped_file.zig  png.zig  tiff.zig  webp.zig
src/lib/: antialiasing.zig  color_delta.zig  diff.zig  root.zig
test/: PngTests.re  RunTests.ml  RunTests.re  TestFramework.ml  TestFramework.re  TestUtils.re  Test_Core.ml  Test_Core.re  Test_IO_BMP.ml  Test_IO_BMP.re  Test_IO_JPG.ml  Test_IO_JPG.re  Test_IO_PNG.ml  Test_IO_PNG.re  Test_IO_TIFF.ml  Test_IO_TIFF.re  coords-fixture.json  dune  node-binding.test.cjs  node-bindings.test.ts
test/test-images/tiff/: laptops-2.tiff
test/tiff/: laptops.tiff
(+18 files in other folders)
