opam-version: "2.0"
synopsis: "The fastest image difference tool."
maintainer: ["https://dmtrkovalenko.dev" "dmtr.kovalenko@outlook.com"]
authors: "Dmitriy Kovalenko"
license: "MIT"
homepage: "https://github.com/dmtrKovalenko/odiff"
doc: "https://github.com/dmtrKovalenko/odiff"
bug-reports: "https://github.com/dmtrKovalenko/odiff/issues"
depends: [
  "dune"
  "reason" {>= "3.6.0" & < "4.0.0"}
  "ocaml"  {>= "4.10.0" & < "5.0.0"}
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
]