(library
 (name ODiffIO)
 (public_name odiff-io)
 (flags
  (-w -40 -w +26)
  (:include flags.sexp)
  -verbose)
 (foreign_stubs
  (language c)
  (names ReadPng)
  (flags
   (:include c_flags.sexp)))
 (c_library_flags
  (:include c_library_flags.sexp))
 (libraries odiff-core))

(rule
 (targets flags.sexp c_flags.sexp c_library_flags.sexp)
 (action
  (run ./config/discover.exe)))
