(library
 (name odiff)
 (public_name odiff-core)
 (flags
  (-w -40 -w +26)))

(env
 (dev
  (flags (:standard -w +42))
  (ocamlopt_flags (:standard -unsafe)))
 (release
  (ocamlopt_flags (:standard -unsafe -O3 -rounds 5 -unboxed-types -unbox-closures -inline 200 -inline-max-depth 7 -unbox-closures-factor 50))))


