(library
 (name Tiff)
 (public_name odiff-io.tiff)
 (flags
  (-w -40 -w +26)
  (:include tiff_flags.sexp))
 (foreign_stubs
  (language c)
  (names ReadTiff)
  (flags
   (:include tiff_c_flags.sexp) -O3))
 (c_library_flags
  (:include tiff_c_library_flags.sexp))
 (libraries odiff-core WritePng))

(rule
 (targets tiff_flags.sexp tiff_c_flags.sexp tiff_c_library_flags.sexp)
 (action
  (run ../config/discover.exe)))
